ubuntu.yaml
kind: Pod
apiVersion: v1
metadata:
  name: curl-pod
spec:
  containers:
    - name: mrit-dummy-pod
      image: ubuntu
      command: ["/bin/bash", "-ec", "while :; do echo '.'; sleep 5 ; done"]
  restartPolicy: Never
