ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress-mrit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: data-influxdb
          servicePort: 80
      - path: /api
        backend:
          serviceName: data-influxdb
          servicePort: 80
